Fix cover image being cut off

--- a/frontend/src/components/layouts/EventHomepage/EventHomepage.module.scss
+++ b/frontend/src/components/layouts/EventHomepage/EventHomepage.module.scss
@@ -37,15 +37,15 @@
 .coverWrapper {
   position: relative;
   width: 100%;
-  height: 300px;
+  height: 560px;
   overflow: hidden;
-  
+
   @include mixins.respond-below(md) {
-    height: 240px;
+    max-height: 400px;
   }
-  
+
   @include mixins.respond-below(sm) {
-    height: 200px;
+    max-height: 350px;
   }
 }
 
