--- a/frontend/src/components/layouts/OrganizerHomepage/OrganizerHomepage.module.scss
+++ b/frontend/src/components/layouts/OrganizerHomepage/OrganizerHomepage.module.scss
@@ -65,15 +65,15 @@
 .coverWrapper {
   position: relative;
   width: 100%;
-  max-height: 375px;
+  max-height: 560px;
   overflow: hidden;
-  
+
   @include mixins.respond-below(md) {
-    height: 160px;
+    max-height: 400px;
   }
-  
+
   @include mixins.respond-below(sm) {
-    height: 120px;
+    max-height: 350px;
   }
 }
 
@@ -142,13 +142,11 @@
 .logo {
   width: 72px;
   height: 72px;
-  border-radius: 16px;
   object-fit: contain;
 
   @include mixins.respond-below(sm) {
     width: 64px;
     height: 64px;
-    border-radius: 14px;
   }
 }
 
